fix: modify index.html

--- a/hitmeup_backend/src/main/resources/templates/index.html
+++ b/hitmeup_backend/src/main/resources/templates/index.html
@@ -129,7 +129,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Hit Me Up. 모든 권리 보유.</p>
+        <p>&copy; 2025 Hit Me Up. All rights reserved.</p>
     </footer>
 </div>
 
