chore: Update semi title

--- a/hitmeup_backend/src/main/resources/templates/index.html
+++ b/hitmeup_backend/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="header-badge-container">
             <h1>Hit Me Up</h1>
-            <p>GitHub README를 위한 간단한 방문자 카운터</p>
+            <p>README, 노션, 웹사이트 어디서든 손쉽게 방문자 수를 표시해보세요</p>
             <div class="header-badge">
                 <a href="https://hitmeup-backend-593087166771.asia-northeast1.run.app">
                     <img src="https://hitmeup-backend-593087166771.asia-northeast1.run.app/api/count/increment?url=https%3A%2F%2Fhit-me-up-336ec.web.app%2F&title=hits&title_bg=555555&count_bg=79c83d&edge_flat=false"
